【Feat】timeout clear video frame

--- a/Android/scenes/joy/src/main/res/layout/joy_activity_live_prepare.xml
+++ b/Android/scenes/joy/src/main/res/layout/joy_activity_live_prepare.xml
@@ -73,6 +73,7 @@
             android:singleLine="true"
             android:textColor="@color/white"
             android:hint="@string/joy_live_prepare_room_name_hint"
+            app:layout_constraintEnd_toStartOf="@+id/iBtnRefresh"
             android:textColorHint="@color/white_60_percent"
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="parent"
