--- a/Android/scenes/joy/src/main/res/layout/joy_activity_live_detail.xml
+++ b/Android/scenes/joy/src/main/res/layout/joy_activity_live_detail.xml
@@ -42,7 +42,7 @@
         app:layout_constraintDimensionRatio="3:4"
         app:layout_constraintEnd_toEndOf="@id/vertical68"
         app:layout_constraintStart_toStartOf="@id/vertical34"
-        app:layout_constraintTop_toTopOf="@+id/clRoomTitle" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/clRoomTitle"
@@ -223,28 +223,40 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/ivGift"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/joy_icon_gift"
-        app:layout_constraintBottom_toBottomOf="@id/tvInput"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:gravity="bottom"
+        app:layout_constraintBottom_toBottomOf="@id/tvInput">
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/ivDeployTroops"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/joy_icon_deploy_troops"
-        app:layout_constraintBottom_toBottomOf="@id/tvInput"
-        app:layout_constraintEnd_toStartOf="@id/ivGift" />
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/ivDeployTroops"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/joy_icon_deploy_troops"
+            app:layout_constraintBottom_toBottomOf="@id/tvInput"
+            app:layout_constraintEnd_toStartOf="@id/ivGift" />
 
-    <io.agora.scene.joy.ui.widget.like.LikeLayout
-        android:id="@+id/likeView"
-        android:layout_width="70dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@id/tvInput"
-        app:layout_constraintEnd_toStartOf="@+id/ivGift" />
+        <io.agora.scene.joy.ui.widget.like.LikeLayout
+            android:id="@+id/likeView"
+            android:layout_width="66dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="@id/tvInput"
+            app:layout_constraintEnd_toStartOf="@+id/ivGift" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/ivGift"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/joy_icon_gift"
+            android:layout_marginEnd="12dp"
+            app:layout_constraintBottom_toBottomOf="@id/tvInput"
+            app:layout_constraintEnd_toEndOf="parent" />
+    </LinearLayout>
+
+
 
     <io.agora.scene.joy.ui.widget.NonInterceptingRecyclerView
         android:id="@+id/rvMessage"
