--- a/Android/scenes/ktv_singbattle/src/main/res/layout/ktv_singbattle_layout_lrc_prepare.xml
+++ b/Android/scenes/ktv_singbattle/src/main/res/layout/ktv_singbattle_layout_lrc_prepare.xml
@@ -8,9 +8,10 @@
         android:id="@+id/status_prepare_view_lrc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/black_85_percent"
-        app:cardCornerRadius="12dp"
+        app:cardBackgroundColor="#99000000"
+        app:cardCornerRadius="@dimen/ktv_singbattle_space_small"
         app:cardElevation="0dp"
+        app:contentPadding="@dimen/ktv_singbattle_space_normal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,33 +21,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:orientation="vertical">
+            android:orientation="horizontal">
+
+            <ProgressBar
+                android:id="@+id/pb"
+                android:layout_width="30dp"
+                android:layout_height="30dp" />
 
             <TextView
-                android:id="@+id/tvContent"
+                android:id="@+id/tvMsg"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginHorizontal="12dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="12dp"
-                android:gravity="center"
-                android:lineSpacingExtra="4dp"
-                android:maxWidth="180dp"
-                android:minWidth="135dp"
-                android:text="@string/ktv_singbattle_loading_music"
-                android:textColor="@color/white"
-                android:textSize="14sp" />
-
-            <ProgressBar
-                android:id="@+id/pbLoadingMusic"
-                style="@android:style/Widget.ProgressBar.Horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="4dp"
-                android:layout_gravity="start"
-                android:max="100"
-                android:progress="0"
-                android:progressDrawable="@drawable/bg_progressbar_text_loading" />
+                android:layout_marginStart="10dp"
+                android:text="@string/ktv_singbattle_lrc_loading"
+                android:textColor="@android:color/white" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </merge>
