--- a/Android/scenes/pure1v1/src/main/res/layout/pure1v1_call_send_dialog.xml
+++ b/Android/scenes/pure1v1/src/main/res/layout/pure1v1_call_send_dialog.xml
@@ -8,34 +8,34 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/clContent"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
+        android:layout_height="match_parent"
         android:layout_gravity="bottom">
 
         <View
             android:id="@+id/vCard"
             android:layout_width="match_parent"
-            android:layout_height="400dp"
+            android:layout_height="match_parent"
             android:background="@drawable/pure1v1_bottom_dialog_card"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             />
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="106dp"
-            android:layout_height="100dp"
-            android:src="@drawable/pure1v1_calling_corner_bg"
-            app:layout_constraintStart_toStartOf="@+id/vCard"
-            app:layout_constraintTop_toTopOf="@+id/vCard"
-            />
+        <TextureView
+            android:id="@+id/tvShow"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cvUserAvatar"
             android:layout_width="72dp"
             android:layout_height="72dp"
-            android:layout_marginTop="-25dp"
+            android:layout_marginTop="50dp"
             app:cardCornerRadius="36dp"
-            app:layout_constraintTop_toTopOf="@id/vCard"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
 
@@ -99,11 +99,11 @@
         <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="36dp"
-            android:layout_marginBottom="36dp"
+            android:layout_marginTop="36dp"
             app:cardElevation="0dp"
             app:cardCornerRadius="18dp"
-            android:backgroundTint="@color/white_20_percent"
-            app:layout_constraintBottom_toTopOf="@id/vCard"
+            android:backgroundTint="@color/black_30_percent"
+            app:layout_constraintTop_toBottomOf="@id/ivHangup"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             >
