--- a/Android/scenes/pure1v1/src/main/res/layout/pure1v1_call_send_dialog.xml
+++ b/Android/scenes/pure1v1/src/main/res/layout/pure1v1_call_send_dialog.xml
@@ -15,13 +15,13 @@
             android:id="@+id/vCard"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/pure1v1_bottom_dialog_card"
+            android:background="@color/white"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             />
 
-        <TextureView
+        <FrameLayout
             android:id="@+id/tvShow"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -51,7 +51,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="27dp"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textStyle="bold"
             android:textSize="22dp"
             android:text="000000000"
@@ -65,7 +65,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="18dp"
-            android:textColor="#3F3F3F"
+            android:textColor="@color/white"
             android:text="@string/pure1v1_call_waiting_acceptance"
             android:textSize="14dp"
             app:layout_constraintTop_toBottomOf="@+id/tvUserName"
