--- a/Android/scenes/pure1v1/src/main/res/layout/pure1v1_room_list_activity.xml
+++ b/Android/scenes/pure1v1/src/main/res/layout/pure1v1_room_list_activity.xml
@@ -26,33 +26,29 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/viewPager2"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:overScrollMode="never"
-            app:layout_scrollEffect="none"
-            tools:layout_editor_absoluteX="4dp"
-            tools:layout_editor_absoluteY="4dp" />
+            android:layout_height="match_parent"/>
 
     </com.scwang.smart.refresh.layout.SmartRefreshLayout>
 
-<!--    <androidx.viewpager2.widget.ViewPager2-->
-<!--        android:id="@+id/viewPager2"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:orientation="vertical"-->
-<!--        android:overScrollMode="never"-->
-<!--        app:layout_scrollEffect="none"-->
-<!--        tools:layout_editor_absoluteX="4dp"-->
-<!--        tools:layout_editor_absoluteY="4dp" />-->
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPager2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:overScrollMode="never"
+        app:layout_scrollEffect="none"
+        tools:layout_editor_absoluteX="4dp"
+        tools:layout_editor_absoluteY="4dp" />
 
     <io.agora.scene.widget.CommonTitleView
         android:id="@+id/title_view"
         style="@style/title_view"
         app:ctv_centerText="@string/pure1v1_room_list_title"
-        tools:ignore="MissingConstraints" />
+        app:ctv_rightImageSrc="@drawable/pure1v1_room_list_refresh"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 
     <io.agora.scene.pure1v1.ui.RoomListGuideView
         android:id="@+id/vGuidance"
@@ -67,6 +63,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="invisible"
+        />
+
+    <FrameLayout
+        android:id="@+id/flSendFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
