--- a/Android/scenes/ktv/src/main/res/layout/ktv_dialog_earback_setting.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_dialog_earback_setting.xml
@@ -115,11 +115,9 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvTipsNoEarPhone"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
         android:textColor="@color/red_e0"
         android:drawableStart="@mipmap/ktv_ear_back_mention_no_earphone"
         android:drawablePadding="5dp"
@@ -127,7 +125,8 @@
         android:textAlignment="textStart"
         android:text="@string/ktv_earback_no_micphone"
         android:visibility="visible"
-        app:layout_constraintTop_toBottomOf="@+id/tvOpenSwitch"
+        app:layout_constraintStart_toStartOf="@id/tvOpenSwitch"
+        app:layout_constraintTop_toBottomOf="@id/tvOpenSwitch"
         />
 
     <androidx.constraintlayout.widget.ConstraintLayout
