--- a/Android/scenes/ktv/src/main/res/layout/ktv_dialog_music_setting.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_dialog_music_setting.xml
@@ -12,11 +12,11 @@
         android:layout_width="wrap_content"
         android:layout_height="48dp"
         android:layout_gravity="center|bottom"
+        android:gravity="bottom"
+        android:paddingBottom="6dp"
         android:text="@string/ktv_voice_profile"
         android:textColor="@color/white"
         android:textSize="16sp"
-        android:gravity="bottom"
-        android:paddingBottom="6dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,10 +35,10 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="48dp"
         android:fillViewport="true"
         android:orientation="vertical"
         android:overScrollMode="never"
-        android:layout_marginTop="48dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -654,7 +654,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginTop="1dp"
-                android:paddingVertical="8dp"
                 app:layout_constraintTop_toBottomOf="@id/layoutLowLatency">
 
                 <androidx.appcompat.widget.AppCompatTextView
@@ -672,47 +671,80 @@
                     android:id="@+id/cbAIAECSwitcher"
                     android:layout_width="50dp"
                     android:layout_height="26dp"
-                    android:layout_marginVertical="4dp"
+                    android:layout_marginVertical="12dp"
                     android:button="@drawable/cb_def_selector"
-                    app:layout_constraintBottom_toTopOf="@+id/aiaecSelector"
+                    app:layout_constraintBottom_toTopOf="@+id/layoutAIAECInput"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/tvAIAEC"
+                    android:id="@+id/tvAIAECStrength"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/ktv_AIAEC_strength"
-                    android:textColor="@color/white_80_percent"
+                    android:textColor="@color/def_text_grey_979"
                     android:textSize="12sp"
-                    android:visibility="gone"
-                    app:layout_constraintBottom_toBottomOf="@+id/aiaecSelector"
+                    app:layout_constraintBottom_toBottomOf="@+id/layoutAIAECInput"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/aiaecSelector"
-                    tools:visibility="visible" />
+                    app:layout_constraintTop_toTopOf="@+id/layoutAIAECInput" />
 
-                <Spinner
-                    android:id="@+id/aiaecSelector"
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tvAIAECInputHint"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="8dp"
-                    android:entries="@array/ktv_aiaec_strength"
-                    android:visibility="gone"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/cbAIAECSwitcher"
-                    tools:visibility="visible" />
+                    android:layout_marginEnd="20dp"
+                    android:text="@string/ktv_AIAEC_input_hint"
+                    android:textColor="@color/def_text_grey_979"
+                    android:textSize="12sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/layoutAIAECInput"
+                    app:layout_constraintEnd_toStartOf="@+id/layoutAIAECInput"
+                    app:layout_constraintTop_toTopOf="@+id/layoutAIAECInput" />
 
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/layoutAIAECInput"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingVertical="8dp"
+                    android:background="@android:color/transparent"
+                    app:boxBackgroundMode="none"
+                    app:boxStrokeColor="@android:color/transparent"
+                    app:hintEnabled="false"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/cbAIAECSwitcher">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/AIAECInput"
+                        android:layout_width="48dp"
+                        android:layout_height="28dp"
+                        android:background="@drawable/ktv_aiaec_input_radius"
+                        android:gravity="center"
+                        android:imeOptions="actionDone"
+                        android:maxLength="1"
+                        android:maxLines="1"
+                        android:inputType="number"
+                        android:singleLine="true"
+                        android:text="1"
+                        android:textColor="@color/white"
+                        android:textSize="15sp" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <androidx.constraintlayout.widget.Group
+                    android:id="@+id/groupAIAECStrength"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:constraint_referenced_ids="layoutAIAECInput,tvAIAECInputHint,tvAIAECStrength">
+
+                </androidx.constraintlayout.widget.Group>
+
+                <com.google.android.material.divider.MaterialDivider
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    app:dividerColor="@color/white_20_percent"
+                    app:layout_constraintTop_toBottomOf="@+id/layoutAIAECInput"
+                    app:layout_goneMarginTop="8dp"
+                    app:layout_constraintBottom_toBottomOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <com.google.android.material.divider.MaterialDivider
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginHorizontal="20dp"
-                app:dividerColor="@color/white_20_percent"
-                app:layout_constraintTop_toBottomOf="@id/layoutAIAEC" />
 
             <View
                 android:layout_width="match_parent"
