--- a/Android/scenes/ktv/src/main/res/layout/ktv_layout_lrc_active.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_layout_lrc_active.xml
@@ -196,6 +196,7 @@
         android:layout_marginBottom="10dp"
         android:background="@mipmap/ic_join_chorus"
         android:visibility="invisible"
+        tools:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -209,6 +210,7 @@
         android:background="@mipmap/ic_join_chorus_loading"
         android:clickable="false"
         android:visibility="invisible"
+        tools:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -303,36 +305,9 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/ivMusicMenu"
-        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
-        android:layout_width="wrap_content"
-        android:layout_height="36dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="0dp"
-        android:insetLeft="0dp"
-        android:insetTop="0dp"
-        android:insetRight="0dp"
-        android:insetBottom="0dp"
-        android:minWidth="0dp"
-        android:padding="0dp"
-        android:text="@string/ktv_room_player_tweak"
-        android:textAppearance="?android:attr/textAppearanceButton"
-        android:textColor="#9BA2AB"
-        android:textSize="8sp"
-        app:backgroundTint="@android:color/transparent"
-        app:cornerRadius="6dp"
-        app:icon="@mipmap/ktv_ic_settings"
-        app:iconGravity="top"
-        app:iconPadding="0dp"
-        app:iconTintMode="src_atop"
-        app:layout_constraintBottom_toBottomOf="@id/ivMusicStart"
-        app:layout_constraintEnd_toStartOf="@id/switchOriginal"
-        app:layout_constraintTop_toTopOf="@id/ivMusicStart" />
-
     <androidx.constraintlayout.widget.Group
         android:id="@+id/rlMusicControlMenu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:constraint_referenced_ids="bgd_control_layout_lrc,switchOriginal,ivMusicMenu,ivMusicStart,ivChangeSong,ivSkipPostlude,ivSkipPrelude" />
+        app:constraint_referenced_ids="bgd_control_layout_lrc,switchOriginal,ivMusicStart,ivChangeSong,ivSkipPostlude,ivSkipPrelude" />
 </androidx.constraintlayout.widget.ConstraintLayout>
