[Android]optmize refresh ui

--- a/Android/scenes/pure1v1/src/main/res/layout/pure1v1_call_send_dialog.xml
+++ b/Android/scenes/pure1v1/src/main/res/layout/pure1v1_call_send_dialog.xml
@@ -77,9 +77,8 @@
             android:id="@+id/tvDot"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#3F3F3F"
+            android:textColor="@color/white"
             android:textSize="14dp"
-            android:text="   "
             app:layout_constraintTop_toTopOf="@+id/tvConnectInfo"
             app:layout_constraintStart_toEndOf="@+id/tvConnectInfo"
             app:layout_constraintBottom_toBottomOf="@+id/tvConnectInfo"
