--- a/Android/scenes/pure1v1/src/main/res/layout/pure1v1_room_list_item_layout.xml
+++ b/Android/scenes/pure1v1/src/main/res/layout/pure1v1_room_list_item_layout.xml
@@ -8,6 +8,7 @@
         android:id="@+id/ivBackground"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@mipmap/bg_app_def_white"
         android:scaleType="centerCrop"
         />
 
