--- a/Android/scenes/pure1v1/src/main/res/layout/pure1v1_dashboard_fragment.xml
+++ b/Android/scenes/pure1v1/src/main/res/layout/pure1v1_dashboard_fragment.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:background="@drawable/pure1v1_dashboard_corner_radius"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.DashboardFragment">
+    tools:context=".ui.living.DashboardFragment">
 
     <TableLayout
         android:id="@+id/tlStatistic"
