--- a/Android/scenes/ktv/src/main/res/layout/ktv_dialog_sound_card.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_dialog_sound_card.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     tools:theme="@style/Theme.AppCompat"
     android:paddingBottom="24dp"
     android:background="@drawable/ktv_rect_white_top_r20">
