--- a/Android/scenes/cantata/src/main/res/layout/cantata_layout_lrc_active.xml
+++ b/Android/scenes/cantata/src/main/res/layout/cantata_layout_lrc_active.xml
@@ -265,7 +265,7 @@
         android:layout_height="wrap_content"
         app:constraint_referenced_ids="bgd_control_layout_lrc,switchOriginal,ivMusicMenu,ivMusicStart,ivChangeSong,ivSkipPostlude,ivSkipPrelude" />
 
-    <io.agora.scene.cantata.ui.widget.chorusView.ChorusMicView
+    <io.agora.scene.cantata.widget.chorusView.ChorusMicView
         android:id="@+id/chorusMicView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
