--- a/Android/scenes/cantata/src/main/res/layout/cantata_activity_room_living.xml
+++ b/Android/scenes/cantata/src/main/res/layout/cantata_activity_room_living.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/cantata_room_bg"
-    tools:context=".ui.activity.RoomLivingActivity">
+    tools:context=".live.RoomLivingActivity">
 
 <!--    <androidx.appcompat.widget.AppCompatImageView-->
 <!--        android:layout_width="match_parent"-->
@@ -125,7 +125,7 @@
 
     </androidx.appcompat.widget.Toolbar>
 
-    <io.agora.scene.cantata.ui.widget.lrcView.LrcControlView
+    <io.agora.scene.cantata.widget.lrcView.LrcControlView
         android:id="@+id/lrcControlView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -159,7 +159,7 @@
         app:layout_constraintBottom_toBottomOf="@id/cbMic"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <io.agora.scene.cantata.ui.widget.rankList.RankListView
+    <io.agora.scene.cantata.widget.rankList.RankListView
         android:id="@+id/rankListView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
