--- a/Android/scenes/ktv/src/main/res/layout/ktv_dialog_music_setting.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_dialog_music_setting.xml
@@ -69,7 +69,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="end"
-                    android:drawableEnd="@mipmap/ktv_ic_arrow_right"
+                    android:drawableEnd="@drawable/ic_arrow_right"
                     android:drawablePadding="5dp"
                     android:text="@string/close"
                     android:textColor="@color/def_text_grey_6c7"
@@ -101,7 +101,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="240dp"
-                    android:drawableEnd="@mipmap/ktv_ic_arrow_right"
+                    android:drawableEnd="@drawable/ic_arrow_right"
                     android:drawablePadding="5dp"
                     android:text="@string/close"
                     android:textColor="@color/def_text_grey_6c7"
