--- a/Android/scenes/ktv/src/main/res/layout/ktv_dialog_sound_card.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_dialog_sound_card.xml
@@ -111,7 +111,7 @@
             android:layout_marginEnd="20dp"
             android:textColor="@color/def_text_color_3c4"
             app:layout_constraintEnd_toEndOf="parent"
-            android:drawableEnd="@mipmap/ktv_ic_arrow_right"
+            android:drawableEnd="@drawable/ic_arrow_right"
             android:textSize="13sp"
             tools:text="TypeA"
             android:gravity="center_vertical|end"
