--- a/Android/app/src/main/res/layout/app_about_info_item.xml
+++ b/Android/app/src/main/res/layout/app_about_info_item.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="72dp"
         android:layout_marginTop="42dp"
-        android:src="@drawable/app_welcome_app_logo"
+        android:src="@mipmap/app_ktv_ic_launcher"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -20,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="@string/app_about_name"
+        android:text="@string/app_name"
         android:textColor="@color/def_text_color_040"
         android:textSize="17sp"
         android:textStyle="bold"
