--- a/Android/scenes/cantata/src/main/res/layout/cantata_activity_room_list.xml
+++ b/Android/scenes/cantata/src/main/res/layout/cantata_activity_room_list.xml
@@ -30,10 +30,10 @@
             android:id="@+id/rvRooms"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginStart="20dp"
             android:layout_marginBottom="20dp"
             android:paddingBottom="50dp"
             android:overScrollMode="never"
+            android:layout_marginHorizontal="16dp"
             android:visibility="gone"
             android:clipChildren="false"
             android:clipToPadding="false"
