【Feat】update 4.1.100-moma debugg ui

--- a/Android/app/src/main/res/layout/app_fragment_home_index_sub.xml
+++ b/Android/app/src/main/res/layout/app_fragment_home_index_sub.xml
@@ -19,4 +19,15 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:textSize="16sp"
+        android:textColor="@color/red_e0"
+        android:text="@string/app_demo_test"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
