--- a/Android/scenes/show/src/main/res/layout/show_ai_photographer_item.xml
+++ b/Android/scenes/show/src/main/res/layout/show_ai_photographer_item.xml
@@ -5,13 +5,14 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/ivIcon"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:src="@mipmap/show_ai_edge_light"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="4dp"
+        app:shapeAppearance="@style/ui_widget_corner2Style"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -22,8 +23,8 @@
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:src="@drawable/show_ai_photographer_item_bg"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@+id/ivIcon"
+        app:layout_constraintStart_toStartOf="@+id/ivIcon" />
 
     <ImageView
         android:id="@+id/ivDownload"
